# OS_projects

./: CMakeLists.txt
include/: param.h  pstat.h
kernel/: #bootasm.S#  defs.h  proc.c  proc.h  syscall.c  sysproc.c  vm.c
user/: getprocs.c  makefile.mk  null.c  ps.c  setpri.c
