cmake_minimum_required(VERSION 3.3)
project(xv6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    fs/cat
    fs/echo
    fs/forktest
    fs/grep
    fs/init
    fs/kill
    fs/ln
    fs/ls
    fs/mkdir
    fs/README
    fs/rm
    fs/sh
    fs/stressfs
    fs/tester
    fs/usertests
    fs/wc
    fs/zombie
    include/fcntl.h
    include/fs.h
    include/param.h
    include/stat.h
    include/syscall.h
    include/traps.h
    include/types.h
    include/x86.h
    "kernel/#bootasm.S#"
    kernel/asm.h
    kernel/bio.c
    kernel/bio.d
    kernel/bio.o
    kernel/bootasm.d
    kernel/bootasm.o
    kernel/bootasm.S
    kernel/bootblock
    kernel/bootblock.out
    kernel/bootmain.c
    kernel/bootmain.d
    kernel/bootmain.o
    kernel/bootother.d
    kernel/bootother.o
    kernel/bootother.out
    kernel/bootother.S
    kernel/buf.h
    kernel/console.c
    kernel/console.d
    kernel/console.o
    kernel/data.d
    kernel/data.o
    kernel/data.S
    kernel/defs.h
    kernel/elf.h
    kernel/exec.c
    kernel/exec.d
    kernel/exec.o
    kernel/file.c
    kernel/file.d
    kernel/file.h
    kernel/file.o
    kernel/fs.c
    kernel/fs.d
    kernel/fs.o
    kernel/ide.c
    kernel/ide.d
    kernel/ide.o
    kernel/initcode.d
    kernel/initcode.o
    kernel/initcode.out
    kernel/initcode.S
    kernel/ioapic.c
    kernel/ioapic.d
    kernel/ioapic.o
    kernel/kalloc.c
    kernel/kalloc.d
    kernel/kalloc.o
    kernel/kbd.c
    kernel/kbd.d
    kernel/kbd.h
    kernel/kbd.o
    kernel/kernel
    kernel/lapic.c
    kernel/lapic.d
    kernel/lapic.o
    kernel/main.c
    kernel/main.d
    kernel/main.o
    kernel/makefile.mk
    kernel/mmu.h
    kernel/mp.c
    kernel/mp.d
    kernel/mp.h
    kernel/mp.o
    kernel/multiboot.d
    kernel/multiboot.o
    kernel/multiboot.S
    kernel/picirq.c
    kernel/picirq.d
    kernel/picirq.o
    kernel/pipe.c
    kernel/pipe.d
    kernel/pipe.o
    kernel/proc.c
    kernel/proc.d
    kernel/proc.h
    kernel/proc.o
    kernel/sign.pl
    kernel/spinlock.c
    kernel/spinlock.d
    kernel/spinlock.h
    kernel/spinlock.o
    kernel/string.c
    kernel/string.d
    kernel/string.o
    kernel/swtch.d
    kernel/swtch.o
    kernel/swtch.S
    kernel/syscall.c
    kernel/syscall.d
    kernel/syscall.o
    kernel/sysfile.c
    kernel/sysfile.d
    kernel/sysfile.o
    kernel/sysfunc.h
    kernel/sysproc.c
    kernel/sysproc.d
    kernel/sysproc.o
    kernel/timer.c
    kernel/timer.d
    kernel/timer.o
    kernel/trap.c
    kernel/trap.d
    kernel/trap.o
    kernel/trapasm.d
    kernel/trapasm.o
    kernel/trapasm.S
    kernel/uart.c
    kernel/uart.d
    kernel/uart.o
    kernel/vectors.d
    kernel/vectors.o
    kernel/vectors.pl
    kernel/vectors.S
    kernel/vm.c
    kernel/vm.d
    kernel/vm.o
    tools/dot-bochsrc
    tools/dot-gdbinit
    tools/gdbutil
    tools/makefile.mk
    tools/mkfs
    tools/mkfs.c
    tools/mkfs.d
    tools/mkfs.o
    user/bin/forktest
    user/cat.c
    user/cat.d
    user/cat.o
    user/echo.c
    user/echo.d
    user/echo.o
    user/forktest.c
    user/forktest.d
    user/forktest.o
    user/grep.c
    user/grep.d
    user/grep.o
    user/init.c
    user/init.d
    user/init.o
    user/kill.c
    user/kill.d
    user/kill.o
    user/ln.c
    user/ln.d
    user/ln.o
    user/ls.c
    user/ls.d
    user/ls.o
    user/makefile.mk
    user/mkdir.c
    user/mkdir.d
    user/mkdir.o
    user/printf.c
    user/printf.d
    user/printf.o
    user/ps.d
    user/rm.c
    user/rm.d
    user/rm.o
    user/sh.c
    user/sh.d
    user/sh.o
    user/spin.d
    user/stressfs.c
    user/stressfs.d
    user/stressfs.o
    user/tester.c
    user/tester.d
    user/tester.o
    user/ulib.c
    user/ulib.d
    user/ulib.o
    user/umalloc.c
    user/umalloc.d
    user/umalloc.o
    user/usage.d
    user/user.h
    user/usertests.c
    user/usertests.d
    user/usertests.o
    user/usys.d
    user/usys.o
    user/usys.S
    user/wc.c
    user/wc.d
    user/wc.o
    user/zombie.c
    user/zombie.d
    user/zombie.o
    bootother
    FILES
    fs.img
    initcode
    Makefile
    README
    version
    xv6.img)

add_executable(xv6 ${SOURCE_FILES})